--- a/styles/global.css
+++ b/styles/global.css
@@ -505,7 +505,7 @@ input[type="text"], input[type="date"], input[type="number"], textarea  {
     
 	
 }
-input[type="submit"], input[type="file"]{
+input[type="submit"], input[type="file"], input[type="reset"]{
     background-color: #424242;
     outline: none;
     border: none;
@@ -515,7 +515,7 @@ input[type="submit"], input[type="file"]{
     margin-bottom: 0.8em;  
     color: white;
  }
-input[type="submit"]:hover , input[type="file"]:hover{
+input[type="submit"]:hover , input[type="file"]:hover, input[type="reset"]:hover{
     background-color: #333333;
     outline: none;
     border: none;
