--- a/styles/global.css
+++ b/styles/global.css
@@ -12,6 +12,18 @@ body{
 a {
     text-decoration: none;
 }
+.button {
+    background-color: #2980b9;
+    border: none;
+    color: white;
+    padding: 5px 5px;
+    text-align: center;
+    
+    display: inline-block;
+    font-size: 0.9em;
+    margin: 4px 2px;
+    cursor: pointer;
+}
 
 div#header{
     width: 100%;
@@ -222,6 +234,21 @@ ul#nav li a.diet1:hover{
     border-left: 2px solid #27ae60;
        
 }
+ul#nf li{     
+    background-color: #2573a7 ;
+    padding-left:20px;
+    border-bottom: 2px solid #206592;
+}
+ul#nf li:hover{     
+    background-color: #206592;
+    padding-left:20px;
+    border-bottom: 3px solid #1c567d;
+}
+ul#nf li a{ 
+   font-size: 0.9em;
+   font-style: italic;
+   color:#fffff1;
+}
 div#container{
     width: 100%;
     margin: 0 auto;
@@ -239,26 +266,46 @@ div#container{
     background-color:#ecf0f1;
     padding: 0px;
     
+    
 }
 .column_middle{
     width: 60%;
     float: left;
     height: 100% ;
     background-color:#ecf0f1;
+    
     padding: 5px;
 }
 .news_feed{
     float: left;
     width: 100%;
     height: 48.5%;
+    overflow: scroll;
     background-color: #ffffff;
-    border-bottom: 5px solid #333333;
+    
 }
 .hr_container{
     height: 300px;
-    width: 31.3%;
-    float: left;
+    width: 32.3%;
+    float: left;    
+    background-color:#cccccc;
+    border-top: 5px solid #2980b9;
     border-bottom: 10px solid #2980b9;    
+}
+.hr_container_inside{
+    width: 100%;
+    height:250px;
+    text-align: center;  
+    padding-top: 10px;
+    color: #ffffff;
+    background-color: #1c567d;
+    border-bottom: 10px solid #2980b9;  
+}
+.hr_container_inside a{
+    color: #ffffff;
+    font-weight: 400;
+    font-style: italic;
+        
 }
 .employee_profile a employee_data{
     font-family: 'Open Sans';
@@ -277,10 +324,27 @@ div#container{
 
 .mail_container{
     height: 300px;
-    width: 31.3%;
+    width: 32.3%;
     float: left;
-    margin:0 3%;
+    margin:0 1%;
+    background-color:#cccccc;
+    border-top: 5px solid #c0392b;
     border-bottom: 10px solid #c0392b;
+}
+.mail_container_inside{
+   width: 100%;
+   height:250px;
+    text-align: center; 
+   padding-top: 10px;
+   color: #ffffff;
+   background-color:#7d261c; 
+   border-bottom: 10px solid #c0392b;
+}
+.mail_container_inside a{
+    color: #ffffff;
+    font-weight: 400;
+    font-style: italic;
+    
 }
 .mail_logo{   
    height: 60px;
@@ -319,10 +383,27 @@ div#container{
 }
 .diet_container{
     height: 300px;
-    width: 31.3%;
+    width: 32.3%;
     float: left;
+    background-color:#cccccc;
     border-bottom: 10px solid #27ae60;
+    border-top: 5px solid #27ae60;
     
+}
+.diet_container_inside{
+   width: 100%;
+   height:250px;
+   text-align: center; 
+   padding-top: 10px;
+   color: #ffffff;
+   background-color: #13532e; 
+   border-bottom: 10px solid #27ae60;
+}
+.diet_container_inside a{
+    color: #ffffff;
+    font-weight: 400;
+    font-style: italic;
+     
 }
 .diet_logo{   
    height: 60px;
@@ -343,14 +424,42 @@ div#container{
     padding: 5px;
 }
 .right_up{
+    float:left;
     width: 50%;
     height: 49%;
+    background-color:#333339;
+}
+.right_up_right{
+    
+    width: 50%;
+    height: 49%;
+    padding-top: 10px;
+    float:left;
+    text-align: center;
+    font-style: italic;
+    font-weight: 600;
+    color: #2980b9;
+    border-top: 5px solid #2980b9;
+    
+    
 }
 .right_down{
-    width: 90%;
+    float:left;
+    width: 100%;
     height: 51%;
+    border-top: 5px solid #2980b9;
+    border-bottom: 10px solid #2980b9;
+    color: #2980b9;
+    font-style: italic;
+    font-weight: 600;
+    padding-top: 10px;
+    padding-left: 35px;
 }
-
+.right_down:hover{
+    border-bottom: 30px solid #2980b9;
+    color: #2573a7;
+    background-color:  #eaf4fa;
+}
 div.menu_icons{
     height: 30px;
     width: auto;
@@ -360,11 +469,33 @@ div.menu_icons{
     
 }
 img{
-    max-height: 100%;
+    max-height: 90%;
     width: auto;
     margin:10px 10px 10px 10px;
 }
-
+/* News feed*/
+.news_feed_left{
+    float: left;
+    width:50%;
+    height:15%;
+    padding-left: 10px;
+    padding-top: 5px;
+    background-color: #2980b9;
+}
+.news_feed_left a{
+    font-size: 1.5em;
+    font-weight: 400;
+    font-style: italic;
+    color:#ffffff;
+}
+.news_feed_right{
+    float: left;
+    width:50%;
+    height:15%;
+    padding-top: 5px;
+    padding-right: 5px;
+    background-color: #2980b9;
+}
 /*mail flow start*/
 .mail_dropdown{
     float: left;
@@ -421,13 +552,14 @@ img{
     width: 100%;
     float: left;
     text-align: center;
-    border-bottom: 10px solid #27ae60;
+    
 }
 .food_menu_buttons{
     height: 10%;
     width: 100%;
     float: left;
     text-align: center;
+    
     border-bottom: 10px solid #27ae60;
 }
 #open_diet_1, #open_diet_2{
@@ -446,6 +578,12 @@ img{
 }
 
 /*diet Ends*/
+/*hr Start*/
+.hr_body{
+    background-color: #ecf0f1;
+    color: #2980b9;
+    font-size: 0.9em;
+}
 .right_up_hr_data{
     width: 100%;
     height: 5%;
@@ -460,6 +598,14 @@ img{
     float: left;
     overflow: scroll;
     
+}
+.right_mail{
+     width: 100%;
+    height: 95%;
+    background-color: #252527; 
+    float: left;
+    border-top: 5px solid #c0392b;
+    border-bottom: 10px solid #c0392b;
 }
 
 /*Hr Ends*/
@@ -478,13 +624,30 @@ img{
     position: absolute;
     background: #ffffff;
     font-size: 0.9em;
-    width: 30%;
-    margin: 5% 0 0 30%;
+    width: 60%;
+    height: 60%;
+    margin: 5% 0 0 20%;
     padding: 10px;
     opacity: 0.9;
     z-index: 1500;
     border-top: 5px solid #2980b9;
     border-bottom: 10px solid #2980b9;  
+}
+.login_left{
+    float:left;
+    background: #ffffff;
+    width: 50%;
+    padding: 10px;
+    opacity: 0.9;   
+}
+.login_right{
+    float:left;
+    background: #ffffff;
+    font-size: 1em;
+    width: 50%;
+    padding: 10px;
+    padding-top: 40px;
+    opacity: 0.9;   
 }
 /* mail popups*/
 #pop_background{
@@ -527,7 +690,7 @@ input[type="text"], input[type="date"], input[type="number"], input[type="passwo
     
 	
 }
-input[type="submit"], input[type="file"],input[type="reset"]{
+input[type="submit"], input[type="file"], button[type="button"], input[type="reset"]{
     background-color: #424242;
     outline: none;
     border: none;
@@ -537,7 +700,7 @@ input[type="submit"], input[type="file"],input[type="reset"]{
     margin-bottom: 0.8em;  
     color: white;
  }
-input[type="submit"]:hover , input[type="file"]:hover,input[type="reset"]:hover{
+input[type="submit"]:hover , input[type="file"]:hover, button[type="button"]:hover, input[type="reset"]:hover{
     background-color: #333333;
     outline: none;
     border: none;
@@ -550,9 +713,23 @@ input[type="submit"]:hover , input[type="file"]:hover,input[type="reset"]:hover{
 #Upload_error{
     color: #c0392b;
 }
+.iframem{
+    width: 100%;
+    height: 100%;
+    border: none;    
+    font-family: 'Open Sans' ;
+    background-color: #ecf0f1;
+} 
 .iframe1{
     width: 100%;
-    height: 50%;
+    height: 10%;
+    border: none;    
+    font-family: 'Open Sans' ;
+    background-color: #ffffff;
+} 
+.iframe2{
+    width: 100%;
+    height: 80%;
     border: none;    
     font-family: 'Open Sans' ;
     background-color: #ffffff;
@@ -569,7 +746,7 @@ input[type="submit"]:hover , input[type="file"]:hover,input[type="reset"]:hover{
     height: 80%;
     border: none;    
     font-family: 'Open Sans' ;
-    background-color: #ffffff;
+    background-color: #ecf0f1;
 } 
  /* HR pops */
  #pop_box_hr_data_record_left{
@@ -632,3 +809,27 @@ input[type="submit"]:hover , input[type="file"]:hover,input[type="reset"]:hover{
      border-left: 5px solid #27ae60;
      
  }
+ /*login*/
+.login_left a{
+    font-weight: 300;
+    font-size: 2.3em;
+    color:#2980b9;  
+    font-style: normal;
+}
+.login_left a spana{
+    font-weight: 600;
+    font-size: 3.4em;
+    color:#c0392b;
+    font-style: normal;
+}
+.login_left a spanb{
+    font-weight: 300;
+    font-size: 3.4em;
+    color:#2980b9;  
+    font-style: normal;
+}
+#log{
+    padding-left:30px;
+    padding-top:30px;
+    border-bottom: 10px solid #2980b9;
+}
